--- a/css/custom.css
+++ b/css/custom.css
@@ -24,7 +24,15 @@ img{
 .card{
     margin-bottom: 20px;
 }
+/* Price list section*/
+.title{
+    color: goldenrod;
+}
 
+.list-group-item{
+   background: none;
+   font-size: 1.1rem; 
+}
 @media screen and (min-width:768px){
     .feature-bg{
         width: 60vw;
