--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ a{
         width: 60vw;
     }
 
-    span{
+    .price {
         position: absolute;
         background: rgba(175, 169, 169, 0.6);
         height: 80px;
